Sculpt Mode not updating in LookDev or Rendered #58890

Closed
opened 2018-12-06 21:32:28 +01:00 by George · 37 comments

Operating system: Windows 10
Graphics card: Nvidia GeForce 1060 GTX

Broken: blender2.8, commit date: 2018-12-06 00:27, hash: 74db65e542, type: Release
Worked: (optional)

I don't know if this was already adressed, so sorry for the duplicate if yes :), but when you're in sculpt mode it would be nice if you could sculpt in Rendered shading mode; right now you can only sculpt real time in solid mode; for the changes to happen you need to switch to Object Mode for the changes to take effect in LookDev or Rendered shading modes; here's a video demonstrating:

Sculpt Mode not updating in LookDev or Rendered view.mp4

Create an object; enter sculpt mode, try to sculpt some details; if you're in solid shade mode it works; switch to lookdev or rendered, nothing happens; it would be nice to see the changes real time;

Cheers!

Operating system: Windows 10 Graphics card: Nvidia GeForce 1060 GTX Broken: blender2.8, commit date: 2018-12-06 00:27, hash: 74db65e5424, type: Release Worked: (optional) I don't know if this was already adressed, so sorry for the duplicate if yes :), but when you're in sculpt mode it would be nice if you could sculpt in Rendered shading mode; right now you can only sculpt real time in solid mode; for the changes to happen you need to switch to Object Mode for the changes to take effect in LookDev or Rendered shading modes; here's a video demonstrating: [Sculpt Mode not updating in LookDev or Rendered view.mp4](https://archive.blender.org/developer/F5861082/Sculpt_Mode_not_updating_in_LookDev_or_Rendered_view.mp4) Create an object; enter sculpt mode, try to sculpt some details; if you're in solid shade mode it works; switch to lookdev or rendered, nothing happens; it would be nice to see the changes real time; Cheers!
Author

Added subscriber: @nomad1983

Added subscriber: @nomad1983

#62307 was marked as duplicate of this issue

#62307 was marked as duplicate of this issue

#62133 was marked as duplicate of this issue

#62133 was marked as duplicate of this issue

#57606 was marked as duplicate of this issue

#57606 was marked as duplicate of this issue

#62069 was marked as duplicate of this issue

#62069 was marked as duplicate of this issue

#61973 was marked as duplicate of this issue

#61973 was marked as duplicate of this issue

#60633 was marked as duplicate of this issue

#60633 was marked as duplicate of this issue

#61865 was marked as duplicate of this issue

#61865 was marked as duplicate of this issue

#61182 was marked as duplicate of this issue

#61182 was marked as duplicate of this issue

#58230 was marked as duplicate of this issue

#58230 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2018-12-07 12:05:17 +01:00

I talked to Sergey about this a bit on IRC and it seems like there will be slow down if we are to support this.

I talked to Sergey about this a bit on IRC and it seems like there will be slow down if we are to support this.
Author

Oh, I understand, it's no big deal, sculpt in solid, then preview for render later, is a fine workflow; thanks for looking into it, cheers!

Oh, I understand, it's no big deal, sculpt in solid, then preview for render later, is a fine workflow; thanks for looking into it, cheers!

Added subscriber: @jamesponge

Added subscriber: @jamesponge

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

The thing that seems unintuitive, is that it does update if Dyntopo is enabled, which should be heavier.

The thing that seems unintuitive, is that it *does* update if Dyntopo is enabled, which should be heavier.

Added subscribers: @NathanWondrak, @brecht

Added subscribers: @NathanWondrak, @brecht

Added subscribers: @Interference, @fclem

Added subscribers: @Interference, @fclem

Added subscriber: @szymi

Added subscriber: @szymi

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Added subscribers: @MalDuffin, @ThinkingPolygons, @tzj, @lichtwerk
Member

The thing that seems unintuitive, is that it does update if Dyntopo is enabled, which should be heavier.

I'm just confirming that it does update when Dynotopo is enabled.

I talked to Sergey about this a bit on IRC and it seems like there will be slow down if we are to support this.

I'd take a bit of slow-down in LookDev and Rendered ( which aren't currently supported anyway ) over the consistency of having it work like the other modes ( wireframe and Solid ). If people want the full speed, they can go back to Solid model to sculpt.

> The thing that seems unintuitive, is that it *does* update if Dyntopo is enabled, which should be heavier. I'm just confirming that it does update when Dynotopo is enabled. > I talked to Sergey about this a bit on IRC and it seems like there will be slow down if we are to support this. I'd take a bit of slow-down in LookDev and Rendered ( which aren't currently supported anyway ) over the consistency of having it work like the other modes ( wireframe and Solid ). If people want the full speed, they can go back to Solid model to sculpt.

Added subscribers: @Facu, @Mets

Added subscribers: @Facu, @Mets

Setting to high because this gets reported so often.

Setting to high because this gets reported so often.
Member

Just wanted to point out that the mesh also updates when sculpting a shape key in lookdev mode.

Just wanted to point out that the mesh also updates when sculpting a shape key in lookdev mode.

Added subscriber: @Sergey

Added subscriber: @Sergey

This is only for standard sculpt mode (no multires or dyntopo):

I have a patch for it but it does have problems: P926

In this patch I'm directly tagging ID_RECALC_GEOMETRY because otherwise the eval object is not updated with the new data. Also doing this invalidates the batch cache so no need for partial invalidation.

Also for some reason in Dyntopo the mesh disappear randomly (or is replaced by the "non-optimized-drawing" version) after a stroke (caused by ob_eval->sculpt->pbvh is NULL). This looks like a threading issue to me but running with -t 1 and disabling threaded sculpt did not help.

@Sergey Is there another way to flush down the geometry changes? so we could at least do partial (only pos & nor) batch cache invalidation.

I know this is a hack but would it be enough to do this only when the viewport who is doing the stroke is in lookdev or render mode?

This is only for standard sculpt mode (no multires or dyntopo): I have a patch for it but it does have problems: [P926](https://archive.blender.org/developer/P926.txt) In this patch I'm directly tagging ID_RECALC_GEOMETRY because otherwise the eval object is not updated with the new data. Also doing this invalidates the batch cache so no need for partial invalidation. Also for some reason in Dyntopo the mesh disappear randomly (or is replaced by the "non-optimized-drawing" version) after a stroke (caused by ob_eval->sculpt->pbvh is NULL). This looks like a threading issue to me but running with -t 1 and disabling threaded sculpt did not help. @Sergey Is there another way to flush down the geometry changes? so we could at least do partial (only pos & nor) batch cache invalidation. I know this is a hack but would it be enough to do this only when the viewport who is doing the stroke is in lookdev or render mode?

I know this is a hack but would it be enough to do this only when the viewport who is doing the stroke is in lookdev or render mode?

We had some checks like that in 2.7. The issue is that it is not uncommon to have a separate rendered viewport, to see how the sculpted object looks like. So you can't really rely on just a single viewport.
Probably, something to do together with the customdata mask, where we need to accumulate flags across all the viewports as well?

Keep in mind, those "flushes" makes sculpting considerably slower, and are to be avoided as much as possible.

(caused by ob_eval->sculpt->pbvh is NULL). This looks like a threading issue to me but running with -t 1 and disabling threaded sculpt did not help.

I'm not sure wt which exact point pbvh is NULL.
If this issue happens with a single object with no modifiers, then the only operations which might run in parallel is the batch cache tag for redraw and geometry. However, with -t 1 or --debug-depsgraph-no-threads those will not run in parallel, and the evaluation order will be deterministic.

Dependency graph update and viewport drawing could never have threading issues, drawing happens after dependency graph threads have finished their work.

> I know this is a hack but would it be enough to do this only when the viewport who is doing the stroke is in lookdev or render mode? We had some checks like that in 2.7. The issue is that it is not uncommon to have a separate rendered viewport, to see how the sculpted object looks like. So you can't really rely on just a single viewport. Probably, something to do together with the customdata mask, where we need to accumulate flags across all the viewports as well? Keep in mind, those "flushes" makes sculpting considerably slower, and are to be avoided as much as possible. > (caused by ob_eval->sculpt->pbvh is NULL). This looks like a threading issue to me but running with -t 1 and disabling threaded sculpt did not help. I'm not sure wt which exact point `pbvh` is NULL. If this issue happens with a single object with no modifiers, then the only operations which might run in parallel is the batch cache tag for redraw and geometry. However, with `-t 1` or `--debug-depsgraph-no-threads` those will not run in parallel, and the evaluation order will be deterministic. Dependency graph update and viewport drawing could never have threading issues, drawing happens after dependency graph threads have finished their work.

Added subscriber: @DinIulianSilviu

Added subscriber: @DinIulianSilviu

This issue was referenced by d77b7b097d

This issue was referenced by d77b7b097d3411a0d28e579bb2d67c8dfa8d04c7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

thank you Dear Developers for your hard Work! - i am happy,because this bug is finally fixed - i can see polygons in viewport,when i use sculpt tool in material view,thank you for fixing this issue.

thank you Dear Developers for your hard Work! - i am happy,because this bug is finally fixed - i can see polygons in viewport,when i use sculpt tool in material view,thank you for fixing this issue.

Added subscriber: @idd

Added subscriber: @idd

Actually there is still the issue. Just downloaded build from May, 17th and when I tryied to use Brush in Sculpting Mode with Multiresolution Modifier I didn't see any change in View untill I switch Quality to any other numbers (doesn't meter to lower or upper). I have to switch it every time then I want to see how is going to looks like. Ohh, and it doesn't work in all mods (Solid, LookDev and Rendered).
I tried on Mac and PC - same.

blnd_bug.PNG

Actually there is still the issue. Just downloaded build from May, 17th and when I tryied to use Brush in Sculpting Mode with Multiresolution Modifier I didn't see any change in View untill I switch Quality to any other numbers (doesn't meter to lower or upper). I have to switch it every time then I want to see how is going to looks like. Ohh, and it doesn't work in all mods (Solid, LookDev and Rendered). I tried on Mac and PC - same. ![blnd_bug.PNG](https://archive.blender.org/developer/F7045839/blnd_bug.PNG)

Added subscriber: @Jakuba

Added subscriber: @Jakuba

Added subscriber: @joolian.4bes

Added subscriber: @joolian.4bes

If you have Multires or Subdivision Surface modifiers, bring the "Preview" value up to get a more accurate representation of the sculpted mesh.

If you have Multires or Subdivision Surface modifiers, bring the "Preview" value up to get a more accurate representation of the sculpted mesh.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58890
No description provided.